snowy-admin-web/k8s/base/namespace.yaml
# Namespace for frontend application
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    env: common
